work more on vew accordion fix spacing and css, need to make more dynamic

--- a/chipReact/src/components/ViewAccordian.css
+++ b/chipReact/src/components/ViewAccordian.css
@@ -1,4 +1,25 @@
 #accordianRight {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    width: 50%;
+    font-size: small;
+    align-items: center;
+}
+
+.accordion-item {
+    width: 100%;
+    align-items: center;
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-between; */
+}
+.accordion-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.accordion-header p{
+    width: 50%;
 }
