--- a/chipReact/src/pages/ViewSBOMs.css
+++ b/chipReact/src/pages/ViewSBOMs.css
@@ -157,6 +157,8 @@ body {
 
 #sbomHeadRow {
   margin-top: 25px;
+  margin-left: 1%;
+  width: 98%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
