--- a/chipReact/src/pages/ViewSBOMs.module.css
+++ b/chipReact/src/pages/ViewSBOMs.module.css
@@ -1,5 +1,6 @@
 .section {
-    padding: 20px;
+    padding: 0;
+    padding-top: 20px;
     border-radius: 10px;
     margin:35px;
     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
